# weather-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_lambda_zip.sh  overlay_location.py  seed_profile.py
tests/: test_handler.py  test_policy.py  test_risk.py  test_url.py
weather_bot/: config.py  handler.py  policy.py  radar.py  risk.py  state_store.py  telegram.py  timeutil.py
